[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "act"
dynamic = ["version"]
authors = [{ name = "Traxton Chen", email = "Traxton.GPG@proton.me" }]
description = "Advanced (Process) Control Toolbox"
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Manufacturing",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Topic :: Adaptive Technologies",
]
requires-python = ">=3.11"
dependencies = []
