# Copyright 2024 Traxton Chen
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Authors:
#   Traxton Chen <Traxton.GPG@proton.me>

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "act"
version = "0.1.0"
authors = [{ name = "Traxton Chen", email = "Traxton.GPG@proton.me" }]
description = "Advanced (Process) Control Toolkit"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.11",
  "Intended Audience :: Manufacturing",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Topic :: Adaptive Technologies",
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
lint = ["basedpyright>=1.22.1", "ruff>=0.8.2"]

[tool.basedpyright]
autoImportCompletions = true
autoSearchPaths = true
diagnosticMode = "openFilesOnly"
useLibraryCodeForTypes = true
typeCheckingMode = "basic"

[tool.ruff]
# Always generate Python 3.11 compatible code
target-version = "py311"

# Maximum number of characters per line without forced line breaks
line-length = 100

# Enable rules
select = [
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "C90",   # mccabe
  "COM",   # flake8-commas
  "D",     # pydocstyle
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle Error
  "F",     # pyflakes
  "FLY",   # flynt
  "G",     # flake8-logging-format
  "I",     # isort
  "ISC",   # flake8-implicit-str-concat
  "PIE",   # flake8-pie
  "PLC",   # Pylint Convention
  "PLE",   # Pylint Error
  "PLW",   # Pylint Warning
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "RSE",   # flake8-raise
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "UP",    # pyupgrade
  "W",     # pycodestyle Warning
  "YTT",   # flake8-2020
]

# Ignore rules
ignore = [
  "E741",    # Ambiguous variable name isn't a huge problem
  "B008",    # Do not perform function calls in argument defaults
  "B011",    # Allow `assert false`. We don't use `python -O`
  "B028",    # We don't need explicit `stacklevel` for warnings
  "D100",    # Docstring stuff
  "D101",
  "D102",
  "D104",
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
  "D402",
  "DTZ005",  # Allow `datetime.datetime.now()` to be called without a `tz` argument
  "E402",    # Simplified black ignore config to make VSCode happy
  "E501",
  "E701",
  "E731",
  "C408",
  "E203",
  "G004",    # Ignore `Logging statement uses f-string` warning
  "RET505",  # Allow unnecessary `elif` after `return` statement
  "D106",    # Allow undocumented public nested class
  "D205",    # No blank line required after summary
  "PLW2901", # Allow overwriting variables in loops
]

# Disable automatic fix
unfixable = [
  "F841", # Unused local variable
  "F601", # Dictionary key literal repeated
  "F602", # Dictionary key repeated
  "B018", # Useless expression
]

[tool.ruff.mccabe]
# The maximum McCabe complexity to allow before triggering C901 errors.
max-complexity = 20

[tool.ruff.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402"]
# Ignore `D103` (missing docstring in public function)
"test/**" = ["D103"]
"docs/**" = ["D103"]
